--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Splitmaster</title>
     <link
-      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700&display=swap"
+      href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Source+Sans+Pro:400,700&display=swap"
       rel="stylesheet"
     />
   </head>
